# chatgpt-practice

./: .gitignore  pyproject.toml
notebook/: 00_eda.ipynb  01_langchain.ipynb  02_qdrant.ipynb  03_pinecone.ipynb  04_pinecone_versionup.ipynb
